--- a/app/src/main/res/layout/item_conveyor.xml
+++ b/app/src/main/res/layout/item_conveyor.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="data"
-            type="com.merlin.conveyor._Convey" />
+            type="com.merlin.conveyor.Convey" />
         <variable
             name="title"
             type="String" />
