--- a/app/src/main/res/layout/activity_website.xml
+++ b/app/src/main/res/layout/activity_website.xml
@@ -15,16 +15,16 @@
         android:orientation="vertical">
         <TextView
             android:layout_gravity="right"
-            binding:enableClick="@{true}"
-            android:text="@{R.string.add}"
+            binding:enableClick="@{null}"
+            binding:text="@{R.string.add}"
             style="@style/titleNormalTextView"/>
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <androidx.recyclerview.widget.RecyclerView
-                android:adapter="@{vm.adapter}"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+<!--        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
+<!--            <androidx.recyclerview.widget.RecyclerView-->
+<!--                android:adapter="@{vm.adapter}"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"/>-->
+<!--        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
     </LinearLayout>
 </layout>
