--- a/app/src/main/res/layout/activity_website.xml
+++ b/app/src/main/res/layout/activity_website.xml
@@ -20,11 +20,11 @@
             style="@style/titleNormalTextView"/>
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
             <androidx.recyclerview.widget.RecyclerView
                 android:adapter="@{vm.adapter}"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="match_parent"/>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </LinearLayout>
 </layout>
