--- a/app/src/main/res/layout/activity_local_photo_choose.xml
+++ b/app/src/main/res/layout/activity_local_photo_choose.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
-            binding:adapter="@{vm.adapter}"
+            android:adapter="@{vm.adapter}"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </LinearLayout>
