--- a/app/src/main/res/layout/activity_website.xml
+++ b/app/src/main/res/layout/activity_website.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="vm"
-            type="com.merlin.model.WebsiteModel" />
+            type="com.merlin.website.WebsiteModel" />
         <import type="com.merlin.view.Clicker"/>
         <import type="com.merlin.client.R"/>
     </data>
