--- a/app/src/main/res/layout/item_web_photo.xml
+++ b/app/src/main/res/layout/item_web_photo.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:binding="http://schemas.android.com/apk/res-auto">
+    xmlns:binding="http://schema
+    s.android.com/apk/res-auto">
     <data>
         <variable
             name="image"
-            type="com.merlin.bean.WebsiteImage" />
+            type="com.merlin.bean.Path" />
         <import type="android.view.View"/>
         <import type="com.merlin.view.Clicker"/>
     </data>
