--- a/app/src/main/res/layout/activity_website_travel_category.xml
+++ b/app/src/main/res/layout/activity_website_travel_category.xml
@@ -18,9 +18,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <TextView
+            android:padding="10dp"
             android:layout_gravity="right"
             binding:enableClick="@{true}"
-            binding:textId="@{R.string.add}"
+            binding:textId="@{null==vm.category?R.string.add:R.string.save}"
             style="@style/titleNormalTextView"/>
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:visibility="@{null==vm.category?View.VISIBLE:View.GONE}"
@@ -36,12 +37,82 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <TextView
+            <EditText
+                android:id="@+id/websiteTravelCategory_titleET"
                 android:layout_gravity="center"
                 binding:textId="@{vm.category.title}"
-                style="@style/titleNormalTextView"/>
+                style="@style/editTextNormal"/>
             <include binding:key="@{R.string.createTime}" binding:value="@{Time.formatTime(vm.category.createTime)}" layout="@layout/item_key_value"/>
-            <include layout="@layout/layout_photo_grid"/>
+            <include binding:key="@{R.string.id}" binding:value="@{``+vm.category.id}" layout="@layout/item_key_value"/>
+
+            <LinearLayout
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="1dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:text="@{R.string.note}"
+                    style="@style/smallNormalTextView"/>
+                <TextView
+                    android:text=":"
+                    style="@style/smallNormalTextView"/>
+                <EditText
+                    android:id="@+id/websiteTravelCategory_noteET"
+                    android:text="@{vm.category.note}"
+                    android:singleLine="false"
+                    android:gravity="left"
+                    style="@style/editTextNormal"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="1dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:text="@{R.string.banner}"
+                    style="@style/smallNormalTextView"/>
+                <TextView
+                    android:text=":"
+                    style="@style/smallNormalTextView"/>
+                <CheckBox
+                    android:id="@+id/websiteTravelCategory_bannerCB"
+                    android:checked="@{vm.category.banner}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <include binding:key="@{R.string.size}" binding:value="@{``+vm.category.children}" layout="@layout/item_key_value"/>
+
+            <LinearLayout
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="1dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:text="@{R.string.coverPhoto}"
+                    style="@style/smallNormalTextView"/>
+                <TextView
+                    android:text=":"
+                    style="@style/smallNormalTextView"/>
+
+                <ImageView
+                    android:id="@+id/websiteTravelCategory_coverIV"
+                    android:src="@{vm.category.url}"
+                    binding:enableClick="@{Clicker.multiClick(vm.category.url,true)}"
+                    android:scaleType="centerCrop"
+                    android:alpha="0.85"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"/>
+            </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:adapter="@{vm.coverAdapter}"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
 
     </LinearLayout>
