--- a/app/src/main/res/layout/item_website_category.xml
+++ b/app/src/main/res/layout/item_website_category.xml
@@ -12,7 +12,6 @@
     </data>
     <RelativeLayout
         android:orientation="vertical"
-        android:padding="@dimen/contentGap"
         binding:enableClick="@{Clicker.click(category)}"
         android:background="@{category.url}"
         android:layout_width="wrap_content"
@@ -21,10 +20,12 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:orientation="vertical"
+            android:padding="@dimen/contentGap"
+            android:background="@drawable/round_corner_gray"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
-                android:text="@{``+category.children.size()}"
+                android:text="@{``+category.children}"
                 style="@style/titleSmallTextView"/>
             <TextView
                 android:text="@{category.title}"
