--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,13 +39,19 @@
     </style>
 
     <style name="editTextNormal" parent="titleNormalTextView">
-         <item name="android:layout_width">match_parent</item>
-         <item name="android:layout_height">wrap_content</item>
-         <item name="android:focusable">true</item>
-         <item name="android:focusableInTouchMode">true</item>
-         <item name="android:minHeight">43dp</item>
-         <item name="android:background">@drawable/round_corner_gray</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:focusable">true</item>
+        <item name="android:focusableInTouchMode">true</item>
+        <item name="android:minHeight">43dp</item>
+        <item name="android:minWidth">10dp</item>
+        <item name="android:background">@android:color/transparent</item>
     </style>
+
+    <style name="editTextNormalBg" parent="editTextNormal">
+        <item name="android:background">@drawable/round_corner_gray</item>
+    </style>
+
 
     <style name="checkboxStyle" parent="@android:style/Widget.CompoundButton.CheckBox">
         <item name="android:button">@drawable/checkbox</item>
