--- a/app/src/main/res/layout/activity_file_browser.xml
+++ b/app/src/main/res/layout/activity_file_browser.xml
@@ -161,10 +161,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <include layout="@layout/item_browser_bottom_menu"
-                        android:visibility="@{(vm.currentMeta.localClient&amp;&amp;(vm.mode==Model.MODE_UPLOAD))?View.VISIBLE:View.GONE}"
+                        android:visibility="@{((vm.mode==Model.MODE_UPLOAD))?View.VISIBLE:View.GONE}"
                         binding:menu="@{ContextMenu.create(R.string.upload)}"/>
                     <include layout="@layout/item_browser_bottom_menu"
-                        android:visibility="@{(!vm.currentMeta.localClient&amp;&amp;(vm.mode==Model.MODE_DOWNLOAD||vm.mode==Model.MODE_MULTI_CHOOSE))?View.VISIBLE:View.GONE}"
+                        android:visibility="@{((vm.mode==Model.MODE_DOWNLOAD||vm.mode==Model.MODE_MULTI_CHOOSE))?View.VISIBLE:View.GONE}"
                         binding:menu="@{ContextMenu.create(R.string.download)}"/>
                     <include layout="@layout/item_browser_bottom_menu"
                         android:visibility="@{(vm.mode==Model.MODE_MOVE||vm.mode==Model.MODE_MULTI_CHOOSE)?View.VISIBLE:View.GONE}"
@@ -185,7 +185,7 @@
                 android:layout_height="match_parent">
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
-                    binding:adapter="@{vm.currentAdapter}"
+                    android:adapter="@{vm.currentAdapter}"
                     android:layout_height="match_parent"/>
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
         </RelativeLayout>
