--- a/app/src/main/res/layout/activity_love.xml
+++ b/app/src/main/res/layout/activity_love.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <androidx.recyclerview.widget.RecyclerView
-                binding:adapter="@{vm.adapter}"
+                android:adapter="@{vm.adapter}"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
