--- a/app/src/main/res/layout/file_browser_menu.xml
+++ b/app/src/main/res/layout/file_browser_menu.xml
@@ -29,6 +29,11 @@
             binding:menu="@{ContextMenu.create(R.string.multiChoose,folder)}"/>
         <include layout="@layout/item_context_menu"
             binding:menu="@{ContextMenu.create(R.string.goTo,folder)}"/>
+        <include layout="@layout/item_context_menu"
+            binding:menu="@{ContextMenu.create(R.string.terminal,folder)}"/>
+<!--        <include layout="@layout/item_context_menu"-->
+<!--            android:visibility="@{null!=folder&amp;&amp;!(folder instanceof LocalFolder)?View.VISIBLE:View.GONE}"-->
+<!--            binding:menu="@{ContextMenu.create(R.string.upload,folder)}"/>-->
 <!--        <include layout="@layout/item_context_menu"-->
 <!--            android:visibility="@{folder instanceof LocalFolder&amp;&amp;((LocalFolder)folder).file.?View.VISIBLE:View.GONE}"-->
 <!--            binding:menu="@{ContextMenu.create(R.string.setAsHome,folder)}"/>-->
