--- a/app/src/main/res/layout/media_display_all_medias.xml
+++ b/app/src/main/res/layout/media_display_all_medias.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <RelativeLayout
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
@@ -25,11 +26,10 @@
                 style="@style/editTextNormal"/>
         </RelativeLayout>
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:paddingTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <androidx.recyclerview.widget.RecyclerView
-                binding:adapter="@{vm.adapter}"
+                android:adapter="@{vm.adapter}"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
