--- a/app/src/main/res/layout/media_display_play.xml
+++ b/app/src/main/res/layout/media_display_play.xml
@@ -11,6 +11,7 @@
         <import type="com.merlin.client.R"/>
         <import type="android.view.View"/>
         <import type="com.merlin.view.Clicker"/>
+        <import type="com.merlin.player.FileMedia"/>
     </data>
     <RelativeLayout
         android:id="@+id/media_display_play_rootRL"
@@ -68,8 +69,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:focusable="true"
-                        android:maxHeight="4.0dip"
-                        android:minHeight="4.0dip"
+                        android:maxHeight="5.0dip"
+                        android:minHeight="5.0dip"
                         android:paddingLeft="16.0dip"
                         android:paddingRight="16.0dip"
                         android:thumb="@drawable/selector_thumb"
@@ -129,11 +130,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <TextView
+                        android:text="@{vm.model.playing.meta.title}"
+                        style="@style/titleNormalTextView" />
+                    <TextView
                         android:text="@{vm.model.playing.meta.album}"
                         style="@style/titleSubNormalTextView" />
-                    <TextView
-                        android:text="@{vm.model.playing.meta.title}"
-                        style="@style/titleSmallTextView" />
                 </LinearLayout>
                 <ImageView
                     android:layout_centerHorizontal="true"
@@ -151,7 +152,7 @@
                     android:layout_height="wrap_content">
                     <ImageView
                         binding:enableClick="@{true}"
-                        android:visibility="@{vm.model.playing==null?View.INVISIBLE:View.VISIBLE}"
+                        android:visibility="@{vm.model.playing instanceof FileMedia?View.INVISIBLE:View.VISIBLE}"
                         android:src="@{vm.model.favorite?R.drawable.heart_pressed:R.drawable.heart_normal}"
                         android:layout_margin="10dp"
                         android:layout_width="@dimen/iconSizeLittle"
@@ -159,13 +160,13 @@
                     <ImageView
                         binding:enableClick="@{true}"
                         android:src="@{R.drawable.selector_download_media}"
-                        android:visibility="@{vm.model.playing==null?View.INVISIBLE:View.VISIBLE}"
+                        android:visibility="@{vm.model.playing instanceof FileMedia?View.INVISIBLE:View.VISIBLE}"
                         android:layout_margin="10dp"
                         android:layout_width="@dimen/iconSizeLittle"
                         android:layout_height="@dimen/iconSizeLittle"/>
                     <ImageView
                         android:src="@{R.drawable.selector_add_to_sheet}"
-                        android:visibility="@{vm.model.playing==null?View.INVISIBLE:View.VISIBLE}"
+                        android:visibility="@{vm.model.playing instanceof FileMedia?View.INVISIBLE:View.VISIBLE}"
                         binding:enableClick="@{true}"
                         android:layout_margin="10dp"
                         android:layout_width="@dimen/iconSizeLittle"
@@ -173,7 +174,7 @@
 
                     <ImageView
                         android:src="@{R.drawable.share_normal}"
-                        android:visibility="@{vm.model.playing==null?View.GONE:View.GONE}"
+                        android:visibility="@{vm.model.playing instanceof FileMedia?View.INVISIBLE:View.VISIBLE}"
                         binding:enableClick="@{true}"
                         android:layout_margin="10dp"
                         android:layout_width="@dimen/iconSizeLittle"
