--- a/app/src/main/res/layout/media_sheet_choose.xml
+++ b/app/src/main/res/layout/media_sheet_choose.xml
@@ -3,17 +3,12 @@
     xmlns:binding="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="media"
-            type="com.merlin.bean.NasMedia" />
-        <variable
             name="vm"
             type="com.merlin.model.MediaSheetChooseListModel" />
-        <import type="android.view.View"/>
-        <import type="com.merlin.view.Clicker"/>
     </data>
     <androidx.recyclerview.widget.RecyclerView
         binding:createModel="@{true}"
-        binding:adapter="@{vm.adapter}"
+        android:adapter="@{vm.adapter}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </layout>
