Add duration and position support

--- a/app/src/main/res/layout/item_media.xml
+++ b/app/src/main/res/layout/item_media.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="mediaFile"
-            type="com.merlin.bean.NasFile" />
+            type="com.merlin.bean.INasFile" />
         <variable
             name="position"
             type="int" />
