--- a/app/src/main/res/layout/item_sheet_media.xml
+++ b/app/src/main/res/layout/item_sheet_media.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="media"
-            type="com.merlin.bean.NasMedia" />
+            type="com.merlin.bean.INasMedia" />
         <import type="android.view.View"/>
         <variable
             name="position"
