--- a/app/src/main/res/layout/media_display_play.xml
+++ b/app/src/main/res/layout/media_display_play.xml
@@ -5,7 +5,7 @@
         <variable
             name="vm"
             type="com.merlin.model.MediaPlayModel" />
-        <import type="com.merlin.player.Status"/>
+        <import type="com.merlin.player.Action"/>
         <import type="com.merlin.player.Time"/>
         <import type="com.merlin.binding.StatusBar"/>
         <import type="com.merlin.client.R"/>
