--- a/app/src/main/res/layout/nas_file_context_menu.xml
+++ b/app/src/main/res/layout/nas_file_context_menu.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="file"
-            type="com.merlin.bean.NasFile" />
+            type="com.merlin.bean.INasFile" />
         <import type="com.merlin.view.ContextMenu"/>
         <import type="android.view.View"/>
         <import type="com.merlin.client.R"/>
