--- a/app/src/main/res/layout/media_display_sheet_category.xml
+++ b/app/src/main/res/layout/media_display_sheet_category.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <androidx.recyclerview.widget.RecyclerView
-                    binding:adapter="@{categoryModel.categoryAdapter}"
+                    android:adapter="@{categoryModel.categoryAdapter}"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
