--- a/app/src/main/res/layout/item_sheet_media.xml
+++ b/app/src/main/res/layout/item_sheet_media.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="media"
-            type="com.merlin.bean.INasMedia" />
+            type="com.merlin.player.Media" />
         <import type="android.view.View"/>
         <variable
             name="position"
@@ -39,13 +39,13 @@
             <TextView
                 android:textSize="@dimen/textTitle"
                 android:textColor="@color/textTitle"
-                android:text="@{media.title}"
+                android:text="@{media.meta.title??media.meta.name}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
                 android:textSize="@dimen/textSmall"
                 android:textColor="@color/textTitleSub"
-                android:text="@{media.artist}"
+                android:text="@{media.meta.artist}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
