--- a/FileManager/src/main/res/layout/file_context_menu.xml
+++ b/FileManager/src/main/res/layout/file_context_menu.xml
@@ -12,7 +12,6 @@
         <import type="com.merlin.browser.binding.ContextMenu"/>
         <import type="android.view.View"/>
         <import type="com.merlin.file.R"/>
-        <import type="com.merlin.bean.LocalFile"/>
     </data>
     <LinearLayout
         android:orientation="vertical"
@@ -21,10 +20,10 @@
         <include layout="@layout/item_context_menu"
             binding:menu="@{ContextMenu.create(R.string.open,file)}"/>
         <include layout="@layout/item_context_menu"
-            android:visibility="@{file instanceof LocalFile&amp;&amp;mode!=Mode.MODE_MULTI_CHOOSE?View.VISIBLE:View.GONE}"
+            android:visibility="@{file.local&amp;&amp;mode!=Mode.MODE_MULTI_CHOOSE?View.VISIBLE:View.GONE}"
             binding:menu="@{ContextMenu.create(R.string.upload,file)}"/>
         <include layout="@layout/item_context_menu"
-            android:visibility="@{file instanceof LocalFile||mode==Mode.MODE_MULTI_CHOOSE?View.GONE:View.VISIBLE}"
+            android:visibility="@{file.local||mode==Mode.MODE_MULTI_CHOOSE?View.GONE:View.VISIBLE}"
             binding:menu="@{ContextMenu.create(R.string.download,file)}"/>
 <!--        <include layout="@layout/item_context_menu"-->
 <!--            android:visibility="@{(!file.directory&amp;&amp;file instanceof LocalFile)?View.VISIBLE:View.GONE}"-->
@@ -39,7 +38,7 @@
         <include layout="@layout/item_context_menu"
             binding:menu="@{ContextMenu.create(R.string.rename,file)}"/>
         <include layout="@layout/item_context_menu"
-            android:visibility="@{file instanceof LocalFile?View.GONE:View.VISIBLE}"
+            android:visibility="@{file.local?View.GONE:View.VISIBLE}"
             binding:menu="@{ContextMenu.create(R.string.scan,file)}"/>
         <include layout="@layout/item_context_menu"
             binding:menu="@{ContextMenu.create(R.string.detail,file)}"/>
