--- a/app/src/main/res/layout/file_context_menu.xml
+++ b/app/src/main/res/layout/file_context_menu.xml
@@ -21,10 +21,10 @@
         <include layout="@layout/item_context_menu"
             binding:menu="@{ContextMenu.create(R.string.open,file)}"/>
         <include layout="@layout/item_context_menu"
-            android:visibility="@{file instanceof LocalFile&amp;&amp;mode!=Mode.MODE_MULTI_CHOOSE?View.VISIBLE:View.GONE}"
+            android:visibility="@{filelocal&amp;&amp;mode!=Mode.MODE_MULTI_CHOOSE?View.VISIBLE:View.GONE}"
             binding:menu="@{ContextMenu.create(R.string.upload,file)}"/>
         <include layout="@layout/item_context_menu"
-            android:visibility="@{file instanceof LocalFile||mode==Mode.MODE_MULTI_CHOOSE?View.GONE:View.VISIBLE}"
+            android:visibility="@{file.local||mode==Mode.MODE_MULTI_CHOOSE?View.GONE:View.VISIBLE}"
             binding:menu="@{ContextMenu.create(R.string.download,file)}"/>
 <!--        <include layout="@layout/item_context_menu"-->
 <!--            android:visibility="@{(!file.directory&amp;&amp;file instanceof LocalFile)?View.VISIBLE:View.GONE}"-->
