--- a/FileManager/src/main/res/layout/layout_file_modify.xml
+++ b/FileManager/src/main/res/layout/layout_file_modify.xml
@@ -14,11 +14,6 @@
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <ProgressBar
-            android:layout_gravity="center_horizontal"
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -40,6 +35,38 @@
                     android:text="@{left.host}"
                     style="@style/titleSmallTextView"/>
             </LinearLayout>
+            <TextView
+                android:text="--"
+                android:visibility="@{left!=null&amp;&amp;null!=right?View.VISIBLE:View.GONE}"
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="@{right!=null?View.VISIBLE:View.GONE}"
+                android:gravity="center"
+                android:layout_weight="1">
+                <TextView
+                    android:lines="2"
+                    android:gravity="center"
+                    android:text="@{right.name}"
+                    android:textStyle="bold"
+                    style="@style/titleSubNormalTextView"/>
+                <TextView
+                    android:singleLine="true"
+                    android:text="@{right.host}"
+                    style="@style/titleSmallTextView"/>
+            </LinearLayout>
         </LinearLayout>
+        <ProgressBar
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:layout_gravity="center_horizontal"
+            android:progress="20"
+            android:minHeight="1dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 </layout>
